[package]
name = "mdi-firmware-stm32"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
cortex-m-semihosting = "0.5"
systick-monotonic = "1.0"
panic-halt = "0.2.0"
heapless = "0.7.16"
flem = "0.6"
nb = "1.1"
fugit = "0.3"

[dependencies.stm32g4xx-hal]
# path = "./stm32g4xx-hal"
version = "0.0.1"
features = ["stm32g474", "rt"]

[dependencies.lvgl]
# path = "./lv_binding_rust/lvgl"
default-features = false
features = ["embedded_graphics", "unsafe_no_autoinit", "lvgl_alloc"]

[profile.dev]
opt-level = 2
# debug = true
lto = false